traversal.snake.Snake.scala.error
Compilation error:
Snake:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getDirection() == Direction.EAST) {
  ^